# Agentic-Robot

./: .gitignore  main.py  pyproject.toml  run_model.sh
server_scripts/: run_qwen35b_model.ps1  run_qwen35b_model.sh  run_qwen_model.ps1  run_qwen_model.sh
src/: LLM_interface.py  depth_camera.py  image_proc.py  mapping.py  tools.py  webcam_capture.py
test_scripts/: openai-api_test.py  test_bbox.py
